updates alignment, good stopping point, return to copy

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital@0&family=Oswald:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 body{
     margin-top: 0px;
     margin-right: 0px;
@@ -8,7 +7,7 @@ body{
     margin-left: 0px;
     height: 100%;
     overflow-x: hidden;
-    background-color: #F8F8F1;
+    background-color: #fcfcfc;
 }
 
 html{
@@ -34,15 +33,17 @@ html{
 
 .projects-header{
     font-family: 'Josefin Slab', serif;
-    font-weight: 500;
-    font-size: 2.2rem;
-    text-align: right;
+    font-size: 3rem;
+    min-width: 300px;
+    text-align: center;
     padding-right: 15px;
     color: #36475d;
     margin-block-start: 0em;
+    background-color: #fcfcfc;
     margin-block-end: 0em;
-    border-bottom: 3px solid #36475d;
+   
 }
+
 
 @media screen and (max-width: 600px) {
     .projects-header{
